--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/slack-notification-channel": "^2.0"
     },
     "require-dev": {
-        "illuminate/notifications": "~5.8.0|^6.0|^7.0|^8.0",
+        "illuminate/notifications": "~5.8.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^7.0|^8.0|^9.0"
     },
